# Fudzi

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  build.sh  description.txt  fudzi.sln  readme.txt
algebra/lib/algebra_lib_vs_project/: algebra_lib_vs_project.vcxproj  algebra_lib_vs_project.vcxproj.filters
algebra/lib/algebra_lib_vs_project/x64/Debug/: algebra_lib_vs_project.idb
algebra/lib/algebra_lib_vs_project/x64/Debug/algebra_.F6A993FB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  algebra_lib_vs_project.lastbuildstate
algebra/lib/inc/: algebra.hpp
algebra/lib/src/: algebra.cpp
algebra/test/algebra_test_vs_project/: algebra_test_vs_project.vcxproj  algebra_test_vs_project.vcxproj.filters  stdafx.cpp
algebra/test/algebra_test_vs_project/x64/Debug/: vc141.idb
algebra/test/algebra_test_vs_project/x64/Debug/algebra_.15373B43.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  algebra_test_vs_project.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
algebra/test/src/: unittests_algebra.cpp
anki/: BIG_O.apkg  C++.apkg  ComputerScience.apkg
doc/: Doxyfile  todo
inc/: algebra_difficult.hpp  algebra_elementary.hpp  graphs_elementary.hpp  graphs_elmentary.hpp  numerical_methods.hpp  stringalgs.hpp  strings.hpp
src/: algebra_elementary.cpp  main.cpp  stringalgs.cpp  strings.cpp
string/lib/inc/: stringalgs.hpp
string/lib/src/: stringalgs.cpp
string/lib/string_lib_vs_project/: string_lib_vs_project.vcxproj  string_lib_vs_project.vcxproj.filters
string/test/src/: unittest_stringAlgs.cpp
string/test/string_test_vs_project/: stdafx.cpp  string_test_vs_project.vcxproj  string_test_vs_project.vcxproj.filters
tasks/: CMakeLists.txt  desc.txt  main.cpp
tasks/task1/: CMakeLists.txt  main.cpp  task1.cpp
tasks/task2/: CMakeLists.txt  main.cpp  task2.cpp
tests/: CMakeLists.txt  main.cpp  tests_algebra_elementary.cpp
